k8s/environments/zipkin/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zipkin-ingress
  labels:
    env: production
    tier: backend
    app: zipkin
spec:
  rules:
  - host: <Zipkin 도메인> # TODO
  #- host: zipkin.192.168.100.64.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zipkin
            port:
              number: 9411
